# Coyote

./: .gitignore  AUTHORS  COPYING  Makefile.am  README.md  arm-configure  configure.ac
circuit/: components.md  mainboard-opti.brd  mainboard-opti.pro  mainboard-opti.sch  mainboard.brd  mainboard.pro  mainboard.sch
doc/: doccoyotte.md  doccoyotte.tex
linker/: stm3210c_flash.ld  stm32_flash.ld
openocd/: debug.cfg  log.out  olimex_stm32_p103-debug.cfg  olimex_stm32_p103.cfg  stm32.cfg  test.cfg
pictures/: labpic.psd  labpic2.psd  labpicrgb.pbm  labpicrgb.psd  stm32lcd.psd
src/: Makefile.am  adc.c  adc.h  display.c  display.h  gl_fonts.c  gl_fonts.h  hw_config.c  hw_config.h  i2c.c  images.c  images.h  main.c  main.h  pictures.c  pictures.h  pwm.c  pwm.h  rtc.c  rtc.h  syscalls.c
src/startup/: startup_stm32f10x_md.c
